force-app/main/default/objects/Next_Best_Action__mdt/Next_Best_Action__mdt.object-meta.xml
<CustomObject>
    <label>Best Time to Call</label>
    <pluralLabel>Best Time to Calls</pluralLabel>
</CustomObject>