force-app/main/default/objects/Next_Best_Action__mdt/fields/CaseIssueType__c.field-meta.xml
<CustomField>
    <fullName>CaseIssueType__c</fullName>
    <label>CaseIssueType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
                <default>true</default>
                <label>Billing</label>
            </value>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>Account Information Update</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
                <isActive>false</isActive>
                <label>Complaint</label>
            </value>
            <value>
                <fullName>Maintenance Inquiry</fullName>
                <isActive>false</isActive>
                <label>Maintenance Inquiry</label>
            </value>
            <value>
                <fullName>Order Inquiry</fullName>
                <isActive>false</isActive>
                <label>Order Inquiry</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>