force-app/main/default/objects/Next_Best_Action__mdt/fields/ObjectAPI_Name__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPI_Name__c</fullName>
    <label>ObjectAPI Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>