force-app/main/default/objects/Next_Best_Action__mdt/fields/Value_1__c.field-meta.xml
<CustomField>
    <fullName>Value_1__c</fullName>
    <label>Value 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>