force-app/main/default/objects/Next_Best_Action__mdt/fields/Value_2__c.field-meta.xml
<CustomField>
    <fullName>Value_2__c</fullName>
    <label>Value 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>