force-app/main/default/objects/Next_Best_Action__mdt/listViews/My_View.listView-meta.xml
<ListView>
    <fullName>My_View</fullName>
    <columns>MasterLabel</columns>
    <columns>Value_1__c</columns>
    <columns>Value_2__c</columns>
    <columns>Result__c</columns>
    <filterScope>Everything</filterScope>
    <label>My View</label>
</ListView>